Add Reward System or something